--- a/RCWS_Situation-room/RCWS_Situation-room/RCWS_Situation-room.csproj
+++ b/RCWS_Situation-room/RCWS_Situation-room/RCWS_Situation-room.csproj
@@ -69,6 +69,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AZELDraw.cs" />
     <Compile Include="define.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -85,6 +86,12 @@
     <Compile Include="Packet.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Setting.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Setting.Designer.cs">
+      <DependentUpon>Setting.cs</DependentUpon>
+    </Compile>
     <Compile Include="TcpReturn.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -102,6 +109,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Setting.resx">
+      <DependentUpon>Setting.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -118,6 +128,39 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="demomap.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\RCWS 논문 외형.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\RCWS_논문_외형.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\RCWS_논문_외형1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\LIST_ICON.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\list_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\close_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\reticle_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\optical_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\database_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\logout_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\weapon_icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
